--- a/robo.service
+++ b/robo.service
@@ -6,7 +6,7 @@ After=network.target
 Type=idle
 Restart=on-failure
 User=root
-ExecStart=/usr/bin/python ~/ROBO/robo.py
+ExecStart=/usr/bin/python /home/ROBO/robo.py
 
 [Install]
 WantedBy=multi-user.target
